static/css/photos.css
/* Main
   ========================================================================== */

#content { max-width: 850px; }


/* Gallery Overview
   ========================================================================== */

#gallery-title {
    margin-top: 24px;
    padding: 0 16px;
    font-weight: bold;
    font-size: 50px;
    text-align: center;
}
#gallery-title h1 {
    display: inline;
    border-bottom: solid 1px #a57100;
}

#gallery-photos {
    margin: 40px 6px;
    padding: 6px;
    border: solid 1px #d3d4db;
    background-color: #fffddb;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-pack: center;
    justify-content: center;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
}

.photo-display {
    margin: 5px 5px;
    width: 150px;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-pack: center;
    justify-content: center;
    -ms-flex-align: center;
    align-items: center;
}

.photo-display a { display: flex; }
.photo-display a img {
    -ms-flex-item-align: center;
    align-self: center;
    max-width: 150px;
    max-height: 150px;
    border: 1px solid #eee;
    transition: all 0.3s ease;
}
.photo-display a img:hover {
    border: 1px solid rgba(0, 0, 255, 0.4);
    box-shadow: 0 0 12px 0 rgba(0, 13, 181, 0.7);
}

#gallery-description {
    margin-top: -3px;
    padding-left: 6px;
    padding-right: 4px;
    font-size: 19px;
    font-style: italic;
}
_:-ms-fullscreen, :root #gallery-description { margin-bottom: 16px; } /* IE 11 */
#gallery-description #desc-fr { padding-top: 4px; padding-bottom: 16px; }
#gallery-description .hseparator { margin-left: -20px; margin-right: -16px; }
@media (max-width: 896px) {
#gallery-description .hseparator { margin-left: 6px; margin-right: 6px; } }
#gallery-description #desc-en { padding-top: 16px; padding-bottom: 10px; }
#gallery-description #desc-fr p:first-child, #gallery-description #desc-en p:first-child { padding-top: 0; padding-bottom: 4px; }
#gallery-description #desc-fr p, #gallery-description #desc-en p { padding-top: 4px; padding-bottom: 4px; }
#gallery-description #desc-fr p:last-child, #gallery-description #desc-en p:last-child { padding-top: 4px; padding-bottom: 0; }
#gallery-description #desc-date {
    margin-top: 2px;
    padding-right: 13px;
    text-align: right;
}


/* Gallery Slider
   ========================================================================== */

#gallery-overlay {
    background-color: rgba(30, 30, 30, 0.98);
    transition-duration: 0.7s;
}

#gallery-slider {
    width: 96%;
    height: 96.5%;
}
#gallery-slider .slides { height: 100%; }
#gallery-slider .slides li {
    height: 100%;
    display: -ms-flexbox !important;
    display: flex !important;
    -ms-flex-direction: column;
    flex-direction: column;
    -ms-flex-pack: center;
    justify-content: center;
    -ms-flex-align: center;
    align-items: center;
}
#gallery-slider .slides li .slide {
    display: -ms-flexbox;
    display: flex;
    -ms-flex-direction: column;
    flex-direction: column; }
#gallery-slider .slides li .slide .slide-img img { display: block; }
#gallery-slider .slides li .slide .slide-info {
    padding: 0 2px;
    width: 100%;
    height: 24px;
    color: #ccc;
    font-family: AlegreyaSans;
    display: inline-block;
}
#gallery-slider .slides li .slide .slide-info .slide-title { float: left; }
#gallery-slider .slides li .slide .slide-info .slide-index { float: right; }

#gallery-slider .flex-direction-nav {
    position: fixed;
    z-index: 10;
    top: 39.5%;
    left: 0;
    margin: 0 2%;   /* bound to the gallery-slider width */
    width: 96%;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-pack: justify;
    justify-content: space-between;
}
#gallery-slider .flex-direction-nav a {
    opacity: 0.3;
    color: #aaa;
    text-decoration: none;
    font-family: SoljikDambaek;
    font-size: 160px;
    transition: all 0.4s ease;
}
#gallery-slider .flex-direction-nav a:hover { opacity: 0.6; color: #ddd; }
#gallery-slider .flex-direction-nav a:focus { outline: none; }

